syntax = "proto3";

option java_multiple_files = true;
option java_package = "ru.sberbank.sbervalidator.service.grpc";
option java_outer_classname = "ValidatorServiceProto";

service ValidatorService {
  rpc ValidateRequest (ValidatorRequest) returns (ValidatorResponse);
}

message ValidatorRequest {
  map<string, string> documentContents = 1;
}

message ResultOfValidation {
  map<bool, string> resultOfValidation = 1;
}

message ValidatorResponse {
  map<string, ResultOfValidation> validationResults = 1;
}
